# chatty

./: .gitignore  Cargo.toml  TODO.md
backend/: Cargo.toml
backend/migrations/2024-03-17-145902_users/: up.sql
backend/migrations/2024-04-11-005727_display_name/: down.sql  up.sql
backend/migrations/2024-04-17-182215_friendship/: down.sql  up.sql
backend/migrations/2024-04-26-165900_users/: up.sql
backend/migrations/2024-04-26-172011_user_relations/: down.sql  up.sql
backend/migrations/2024-04-26-172924_channels/: down.sql  up.sql
backend/migrations/2024-04-26-174107_channel_subscribers/: down.sql  up.sql
backend/migrations/2024-04-26-175057_messages/: down.sql  up.sql
backend/migrations/2024-04-26-211816_optional_display_name/: down.sql  up.sql
backend/migrations/2024-04-27-105107_message_channel_triggers/: down.sql  up.sql
backend/migrations/2024-04-27-134939_limit/: down.sql  up.sql
backend/src/: api.rs  chat_api.rs  config.rs  database.rs  file_storage.rs  main.rs  middlewares.rs  serve_app.rs  server_state.rs  structs.rs  web_socket_manager.rs
backend/src/api/: chat_api.rs  middlewares.rs  router.rs  user_api.rs
backend/src/chat_api/: handles.rs  protections.rs  router.rs
backend/src/database/: channel_subscribers_table.rs  channel_table.rs  message_table.rs  models.rs  schema.rs  user_relations_table.rs  users_table.rs
backend/src/structs/: channel.rs  chatty_response.rs  checked_string.rs  client.rs  id.rs  notification.rs  socket_signal.rs  store_table.rs  ts.rs
frontend/: index.html  package-lock.json  package.json
src/: main.rs  middlewares.rs  send_msg_req_validator.rs  serve_app.rs
(+45 files in other folders)
