[package]
name = "chatty-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
axum = {version = "0.7.4", features=["ws"]}
serde_json = "1.0.114"
tower-http = {version = "0.5.2", features = ["cors", "fs"]}
tower = "0.4.13"
serde = {version = "1.0.197", features = ["derive"]}
futures = "0.3.30"
tokio-util = "0.7.10"
diesel = {version = "2.1.0", features = ["postgres", "uuid"]}
diesel_migrations = "2.0.0"
dotenvy = "0.15"
uuid = "1.7.0"
password-auth = "1.0.0"
axum_session = "0.13.0"
