[package]
name = "chatty-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
axum = {version = "0.7.4", features=["ws", "multipart"]}
serde_json = "1.0.114"
tower-http = {version = "0.5.2", features = ["cors", "fs"]}
tower = "0.4.13"
serde = {version = "1.0.197", features = ["derive"]}
tokio-util = "0.7.10"
diesel = {version = "2.1.0", features = ["postgres", "uuid"]}
diesel_migrations = "2.0.0"
dotenvy = "0.15"
uuid = {version = "1.8.0", features = ["v4", "v7", "fast-rng"]}
password-auth = "1.0.0"
axum_session = "0.13.0"
futures-locks = "0.7.1"
diesel-derive-enum = "2.1.0"
axum-macros = "0.4.1"
regex = "1.10.4"
duplicate = "1.0.0"
rand = {version="0.8.5", features = ["getrandom", "small_rng"]}
futures = "0.3.30"
